--- a/app/src/main/res/layout/fragment_wallet_address.xml
+++ b/app/src/main/res/layout/fragment_wallet_address.xml
@@ -148,9 +148,9 @@
                    android:id="@+id/textView24"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
-                   android:layout_margin="@dimen/_10sdp"
+                   android:layout_marginStart="@dimen/_5sdp"
                    android:fontFamily="@font/montserrat"
-                   android:text="@string/token_transfer"
+                   android:text="@string/erc_checksum_format"
                    android:textColor="@color/colorSemiBlack"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold"
