--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -46,5 +46,6 @@
     <color name="light_text_color">#7c7d80</color>
     <color name="text_color_blue">#597088</color>
     <color name="dark_text_color">#3b3e42</color>
+    <color name="color_green_success">#0d8f4f</color>
 
 </resources>
