--- a/app/src/main/res/layout/layout_payment_history_list.xml
+++ b/app/src/main/res/layout/layout_payment_history_list.xml
@@ -39,7 +39,7 @@
             android:gravity="center|start"
             android:paddingStart="@dimen/_3sdp"
             android:paddingEnd="@dimen/_1sdp"
-            android:text="@string/reference_no"
+            android:text="@string/txt_id"
             android:textColor="@color/light_text_color"
             android:textSize="@dimen/_11sdp"
             app:layout_constraintBottom_toBottomOf="@+id/imageView18"
@@ -49,7 +49,7 @@
             app:layout_constraintVertical_chainStyle="spread_inside" />
 
         <com.app.l_pesa.common.CommonTextRegular
-            android:id="@+id/txtRef"
+            android:id="@+id/txnId"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:fontFamily="@font/montserrat"
@@ -59,23 +59,11 @@
             android:layout_marginBottom="@dimen/_7sdp"
             android:textColor="@color/dark_text_color"
             android:textSize="@dimen/_11sdp"
-            app:layout_constraintBottom_toTopOf="@+id/textView39"
             app:layout_constraintEnd_toStartOf="@+id/viewVertical"
             app:layout_constraintStart_toEndOf="@+id/imageView18"
             app:layout_constraintTop_toBottomOf="@+id/textView16" />
 
-        <ImageView
-            android:id="@+id/imageView35"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/_3sdp"
-            android:contentDescription="@string/app_name"
-            app:layout_constraintBottom_toBottomOf="@+id/textView39"
-            app:layout_constraintEnd_toStartOf="@+id/textView39"
-            app:layout_constraintHorizontal_chainStyle="spread_inside"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/txtRef"
-            app:srcCompat="@drawable/ic_request_date" />
+
 
         <View
             android:id="@+id/viewVertical"
@@ -111,7 +99,7 @@
             android:gravity="start|center"
             android:paddingStart="@dimen/_3sdp"
             android:paddingEnd="@dimen/_1sdp"
-            android:text="@string/transfer_amount"
+            android:text="@string/amount"
             android:textColor="@color/light_text_color"
             android:textSize="@dimen/_11sdp"
             app:layout_constraintBottom_toBottomOf="@+id/imageView36"
@@ -134,7 +122,7 @@
             app:layout_constraintStart_toEndOf="@+id/imageView36"
             app:layout_constraintTop_toBottomOf="@+id/textView36" />
 
-        <TextView
+       <!-- <TextView
             android:id="@+id/textView39"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -145,12 +133,12 @@
             android:text="@string/txt_id"
             android:textColor="@color/light_text_color"
             android:textSize="@dimen/_11sdp"
-            app:layout_constraintBottom_toBottomOf="@+id/imageView35"
+            app:layout_constraintBottom_toBottomOf="@+id/imageView18"
             app:layout_constraintEnd_toEndOf="@+id/viewVertical"
-            app:layout_constraintStart_toEndOf="@+id/imageView35"
-            app:layout_constraintTop_toTopOf="@+id/imageView35" />
+            app:layout_constraintStart_toEndOf="@+id/imageView18"
+            app:layout_constraintTop_toTopOf="@+id/imageView18" />-->
 
-        <com.app.l_pesa.common.CommonTextRegular
+        <!--<com.app.l_pesa.common.CommonTextRegular
             android:id="@+id/txtTxnId"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -163,7 +151,7 @@
             android:textSize="@dimen/_11sdp"
             app:layout_constraintEnd_toEndOf="@id/viewVertical"
             app:layout_constraintStart_toEndOf="@+id/imageView35"
-            app:layout_constraintTop_toBottomOf="@+id/textView39" />
+            app:layout_constraintTop_toBottomOf="@+id/textView39" />-->
 
         <ImageView
             android:id="@+id/imageView37"
