--- a/app/src/main/res/layout/layout_payment_history_list.xml
+++ b/app/src/main/res/layout/layout_payment_history_list.xml
@@ -15,7 +15,7 @@
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:padding="@dimen/_2sdp"
         >
 
@@ -59,11 +59,23 @@
             android:layout_marginBottom="@dimen/_7sdp"
             android:textColor="@color/dark_text_color"
             android:textSize="@dimen/_11sdp"
+            app:layout_constraintBottom_toTopOf="@+id/txtCreateDate"
             app:layout_constraintEnd_toStartOf="@+id/viewVertical"
             app:layout_constraintStart_toEndOf="@+id/imageView18"
             app:layout_constraintTop_toBottomOf="@+id/textView16" />
 
-
+        <ImageView
+            android:id="@+id/imageView35"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/_3sdp"
+            android:contentDescription="@string/app_name"
+            app:layout_constraintBottom_toBottomOf="@+id/txtCreateDate"
+            app:layout_constraintEnd_toStartOf="@+id/txtCreateDate"
+            app:layout_constraintHorizontal_chainStyle="spread_inside"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/txnId"
+            app:srcCompat="@drawable/ic_request_date" />
 
         <View
             android:id="@+id/viewVertical"
@@ -122,36 +134,22 @@
             app:layout_constraintStart_toEndOf="@+id/imageView36"
             app:layout_constraintTop_toBottomOf="@+id/textView36" />
 
-       <!-- <TextView
-            android:id="@+id/textView39"
+        <com.app.l_pesa.common.CommonTextRegular
+            android:id="@+id/txtCreateDate"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:fontFamily="@font/montserrat"
             android:gravity="center|start"
             android:paddingStart="@dimen/_3sdp"
             android:paddingEnd="@dimen/_1sdp"
-            android:text="@string/txt_id"
             android:textColor="@color/light_text_color"
             android:textSize="@dimen/_11sdp"
-            app:layout_constraintBottom_toBottomOf="@+id/imageView18"
+            app:layout_constraintBottom_toBottomOf="@+id/imageView35"
             app:layout_constraintEnd_toEndOf="@+id/viewVertical"
-            app:layout_constraintStart_toEndOf="@+id/imageView18"
-            app:layout_constraintTop_toTopOf="@+id/imageView18" />-->
-
-        <!--<com.app.l_pesa.common.CommonTextRegular
-            android:id="@+id/txtTxnId"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/montserrat"
-            android:paddingStart="@dimen/_3sdp"
-            android:layout_marginBottom="@dimen/_7sdp"
-            android:paddingEnd="@dimen/_1sdp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:textColor="@color/dark_text_color"
-            android:textSize="@dimen/_11sdp"
-            app:layout_constraintEnd_toEndOf="@id/viewVertical"
             app:layout_constraintStart_toEndOf="@+id/imageView35"
-            app:layout_constraintTop_toBottomOf="@+id/textView39" />-->
+            app:layout_constraintTop_toTopOf="@+id/imageView35" />
+
+
 
         <ImageView
             android:id="@+id/imageView37"
@@ -186,7 +184,7 @@
             android:fontFamily="@font/montserrat"
             android:paddingStart="@dimen/_3sdp"
             android:paddingEnd="@dimen/_1sdp"
-            android:layout_marginBottom="@dimen/_7sdp"
+            android:layout_marginBottom="@dimen/_2sdp"
             app:layout_constraintBottom_toBottomOf="parent"
             android:textColor="@color/light_text_color"
             android:textSize="@dimen/_11sdp"
