--- a/app/src/main/res/layout/layout_investment_history_list.xml
+++ b/app/src/main/res/layout/layout_investment_history_list.xml
@@ -234,20 +234,33 @@
             app:layout_constraintTop_toTopOf="@+id/imageView7" />
 
 
-        <com.app.l_pesa.common.CommonTextRegular
+        <View
+            android:id="@+id/viewOne"
+            android:layout_width="1px"
+            android:layout_height="0dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/view"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginEnd="@dimen/_15sdp"
+            android:background="@android:color/transparent"
+
+            />
+
+       <com.app.l_pesa.common.CommonTextRegular
             android:id="@+id/txtAppliedDate"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/_10sdp"
             android:drawableStart="@drawable/ic_calendar_icon"
             android:drawablePadding="@dimen/_2sdp"
             android:gravity="center|start"
+            android:layout_marginStart="@dimen/_5sdp"
             android:textColor="@color/textColors"
             android:textSize="@dimen/_11sdp"
             app:layout_constraintBottom_toBottomOf="@+id/view"
             app:layout_constraintEnd_toStartOf="@+id/imgEdit"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/txtRef"
+            app:layout_constraintStart_toEndOf="@+id/viewOne"
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageButton
