--- a/app/src/main/res/layout/layout_interest_history.xml
+++ b/app/src/main/res/layout/layout_interest_history.xml
@@ -17,7 +17,7 @@
 
 
             <com.app.l_pesa.common.CommonTextRegular
-                android:id="@+id/txtRef"
+                android:id="@+id/txtTokenValue"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:textColor="@color/dark_text_color"
@@ -30,7 +30,7 @@
                 android:id="@+id/txtCreateDate"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_5sdp"
+                android:layout_marginTop="@dimen/_2sdp"
                 android:drawableStart="@drawable/ic_request_date"
                 android:drawablePadding="@dimen/_3sdp"
                 android:fontFamily="@font/montserrat"
@@ -39,13 +39,13 @@
                 android:gravity="center|start"
                 app:layout_constraintEnd_toStartOf="@+id/view41"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/txtRef" />
+                app:layout_constraintTop_toBottomOf="@+id/txtTokenValue" />
 
             <com.app.l_pesa.common.CommonTextRegular
-                android:id="@+id/txtTokenValue"
+                android:id="@+id/txtRef"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_5sdp"
+                android:layout_marginTop="@dimen/_2sdp"
                 android:fontFamily="@font/montserrat"
                 android:textColor="@color/light_text_color"
                 android:textSize="@dimen/_10sdp"
@@ -64,24 +64,12 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <com.app.l_pesa.common.CommonTextRegular
-                android:id="@+id/txtNarration"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/montserrat"
-                android:text="@string/narration"
-                android:textColor="@color/light_text_color"
-                android:textSize="@dimen/_10sdp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/view41"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/txtTokenValue" />
 
             <com.app.l_pesa.common.CommonTextRegular
                 android:id="@+id/textView69"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/interest_amount"
+                android:text="@string/earned_interest"
                 android:textSize="@dimen/_10sdp"
                 android:textColor="@color/dark_text_color"
                 android:layout_marginTop="@dimen/_17sdp"
@@ -97,9 +85,10 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/montserrat"
                 android:textColor="@color/colorPrimary"
+                android:textSize="@dimen/_12sdp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginBottom="@dimen/_15sdp"
+                android:layout_marginBottom="@dimen/_7sdp"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toEndOf="@+id/view41"
                 app:layout_constraintTop_toBottomOf="@+id/textView69" />
