--- a/app/src/main/res/layout/layout_investment_history_list.xml
+++ b/app/src/main/res/layout/layout_investment_history_list.xml
@@ -3,7 +3,9 @@
     android:id="@+id/cardView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="@dimen/_3sdp"
+    android:layout_marginStart="@dimen/_3sdp"
+    android:layout_marginEnd="@dimen/_3sdp"
+    android:layout_marginBottom="@dimen/_7sdp"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
@@ -61,7 +63,7 @@
             android:fontFamily="@font/montserrat"
             android:gravity="start|center"
             android:text=""
-            android:textColor="@color/dark_text_color"
+            android:textColor="@color/colorTextBlackLight"
             android:textSize="@dimen/_10sdp"
             app:layout_constraintBottom_toBottomOf="@+id/imageView2"
             app:layout_constraintBottom_toTopOf="@+id/imageView3"
@@ -92,7 +94,7 @@
             android:fontFamily="@font/montserrat"
             android:gravity="start|center"
             android:text=""
-            android:textColor="@color/textColors"
+            android:textColor="@color/colorTextBlackLight"
             android:textSize="@dimen/_10sdp"
             app:layout_constraintBottom_toBottomOf="@+id/imageView3"
             app:layout_constraintEnd_toStartOf="@id/view4"
@@ -121,7 +123,7 @@
             android:layout_marginEnd="@dimen/_2sdp"
             android:fontFamily="@font/montserrat"
             android:gravity="start|center"
-            android:textColor="@color/textColors"
+            android:textColor="@color/colorTextBlackLight"
             android:textSize="@dimen/_10sdp"
             app:layout_constraintBottom_toBottomOf="@+id/imageView4"
             app:layout_constraintEnd_toEndOf="parent"
@@ -166,7 +168,7 @@
             android:fontFamily="@font/montserrat"
             android:gravity="start|center"
             app:layout_constraintBottom_toBottomOf="@+id/imageView5"
-            android:textColor="@color/textColors"
+            android:textColor="@color/colorTextBlackLight"
             android:textSize="@dimen/_10sdp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
@@ -195,7 +197,7 @@
             android:fontFamily="@font/montserrat"
             android:gravity="start|center"
             android:text=""
-            android:textColor="@color/textColors"
+            android:textColor="@color/colorTextBlackLight"
             android:textSize="@dimen/_10sdp"
             app:layout_constraintBottom_toBottomOf="@+id/imageView6"
             app:layout_constraintEnd_toEndOf="parent"
@@ -225,7 +227,7 @@
             android:layout_marginStart="@dimen/_2sdp"
             android:fontFamily="@font/montserrat"
             android:gravity="start|center"
-            android:textColor="@color/textColors"
+            android:textColor="@color/colorTextBlackLight"
             android:textSize="@dimen/_10sdp"
             app:layout_constraintBottom_toTopOf="@+id/txtDetails"
             app:layout_constraintEnd_toEndOf="parent"
@@ -256,7 +258,7 @@
             android:drawablePadding="@dimen/_2sdp"
             android:gravity="center|start"
             android:layout_marginStart="@dimen/_5sdp"
-            android:textColor="@color/textColors"
+            android:textColor="@color/colorTextBlackLight"
             android:textSize="@dimen/_11sdp"
             app:layout_constraintBottom_toBottomOf="@+id/view"
             app:layout_constraintEnd_toStartOf="@+id/imgEdit"
