--- a/app/src/main/res/layout/layout_investment_history_list.xml
+++ b/app/src/main/res/layout/layout_investment_history_list.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:tools="http://schemas.android.com/tools"
+<android.support.v7.widget.CardView
     android:id="@+id/cardView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginStart="@dimen/_3sdp"
-    android:layout_marginEnd="@dimen/_3sdp"
-    android:layout_marginBottom="@dimen/_7sdp"
+    android:layout_marginStart="@dimen/_5sdp"
+    android:layout_marginEnd="@dimen/_5sdp"
+    android:layout_marginBottom="@dimen/_10sdp"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
@@ -21,8 +21,8 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/_5sdp"
             android:layout_marginTop="@dimen/_5sdp"
-            android:textColor="@color/dark_text_color"
-            android:textSize="@dimen/_11sdp"
+            android:textColor="@color/colorTextBlackLight"
+            android:textSize="@dimen/_10sdp"
             app:layout_constraintBottom_toTopOf="@+id/view"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
@@ -136,7 +136,7 @@
             android:layout_width="@dimen/_1sdp"
             android:layout_height="0dp"
             android:layout_marginTop="@dimen/_5sdp"
-            android:layout_marginEnd="@dimen/_15sdp"
+            android:layout_marginEnd="@dimen/_18sdp"
             android:layout_marginBottom="@dimen/_5sdp"
             android:background="@color/divider_color"
             app:layout_constraintBottom_toTopOf="@+id/txtDetails"
@@ -245,7 +245,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginEnd="@dimen/_15sdp"
+            android:layout_marginEnd="@dimen/_18sdp"
             android:background="@android:color/transparent"
 
             />
@@ -259,7 +259,7 @@
             android:gravity="center|start"
             android:layout_marginStart="@dimen/_5sdp"
             android:textColor="@color/colorTextBlackLight"
-            android:textSize="@dimen/_11sdp"
+            android:textSize="@dimen/_10sdp"
             app:layout_constraintBottom_toBottomOf="@+id/view"
             app:layout_constraintEnd_toStartOf="@+id/imgEdit"
             app:layout_constraintStart_toEndOf="@+id/viewOne"
@@ -284,11 +284,11 @@
             android:id="@+id/txtDetails"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:background="#f2f2f2"
+            android:background="#f7f9f9"
             android:fontFamily="@font/montserrat"
             android:gravity="center|start"
             android:padding="@dimen/_5sdp"
-            android:textSize="@dimen/_12sdp"
+            android:textSize="@dimen/_11sdp"
             android:drawablePadding="@dimen/_3sdp"
             android:textColor="@color/dark_text_color"
             app:layout_constraintBottom_toBottomOf="parent"
