--- a/app/src/main/res/layout/fragment_loan_plan_list.xml
+++ b/app/src/main/res/layout/fragment_loan_plan_list.xml
@@ -56,9 +56,7 @@
                     />
 
 
-
             </LinearLayout>
-
 
         </android.support.v7.widget.CardView>
 
@@ -66,6 +64,7 @@
         android:id="@+id/rvLoan"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginTop="@dimen/_3sdp"
         />
 
 </RelativeLayout>
