--- a/app/src/main/res/drawable/ic_money_in_side.xml
+++ b/app/src/main/res/drawable/ic_money_in_side.xml
@@ -1,6 +1,6 @@
 <vector android:autoMirrored="true" android:height="24dp"
     android:viewportHeight="48" android:viewportWidth="48"
     android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#F5AA08" android:pathData="M24,24m-24,0a24,24 0,1 1,48 0a24,24 0,1 1,-48 0"/>
+    <path android:fillColor="#00BFA5" android:pathData="M24,24m-24,0a24,24 0,1 1,48 0a24,24 0,1 1,-48 0"/>
     <path android:fillColor="#FFFFFF" android:pathData="M26.694,14.467l-1.935,1.91l6.462,6.462l-19.649,0l0,2.722l19.649,0l-6.462,6.461l1.935,1.911l9.734,-9.733z"/>
 </vector>
