--- a/app/src/main/res/layout/layout_list_transaction_history.xml
+++ b/app/src/main/res/layout/layout_list_transaction_history.xml
@@ -27,7 +27,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/ic_money_in" />
+                app:srcCompat="@drawable/ic_money_out_side" />
 
             <com.app.l_pesa.common.CommonTextRegular
                 android:id="@+id/textView15"
@@ -39,7 +39,7 @@
                 android:gravity="start|center"
                 android:textColor="@color/light_text_color"
                 android:textSize="@dimen/_10sdp"
-                app:layout_constraintBottom_toTopOf="@+id/txtRef"
+                app:layout_constraintBottom_toTopOf="@+id/txtCreateDate"
                 app:layout_constraintStart_toEndOf="@+id/imageStatus"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_chainStyle="spread_inside" />
@@ -48,14 +48,14 @@
                 android:id="@+id/txtRef"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/_5sdp"
+                android:layout_marginStart="@dimen/_1sdp"
                 android:textSize="@dimen/_11sdp"
                 android:fontFamily="@font/montserrat"
-                android:textColor="@color/dark_text_color"
+                android:textColor="@color/colorTextBlackLight"
                 android:layout_marginBottom="@dimen/_3sdp"
-                app:layout_constraintBottom_toTopOf="@+id/txtCreateDate"
-                app:layout_constraintStart_toEndOf="@+id/imageStatus"
-                app:layout_constraintTop_toBottomOf="@+id/textView15" />
+                app:layout_constraintStart_toEndOf="@+id/textView15"
+                app:layout_constraintTop_toTopOf="parent"
+                 />
 
             <com.app.l_pesa.common.CommonTextRegular
                 android:id="@+id/txtCreateDate"
