--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -33,6 +33,20 @@
                android:background="@drawable/bg_transparent_border_white_view"
                android:layout_marginEnd="@dimen/_3sdp"
                android:textAllCaps="false"
+
+               />
+
+           <ImageView
+               android:id="@+id/imgFilter"
+               android:contentDescription="@string/app_name"
+               android:layout_width="@dimen/_25sdp"
+               android:layout_height="@dimen/_22sdp"
+               android:layout_gravity="end"
+               android:src="@drawable/ic_filter"
+               android:layout_marginEnd="@dimen/_12sdp"
+               android:background="?attr/selectableItemBackgroundBorderless"
+               android:focusable="true"
+
                />
        </android.support.v7.widget.Toolbar>
     </android.support.design.widget.AppBarLayout>
