--- a/app/src/main/res/layout/layout_transfer_history.xml
+++ b/app/src/main/res/layout/layout_transfer_history.xml
@@ -16,7 +16,7 @@
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:padding="@dimen/_5sdp">
+            android:padding="@dimen/_3sdp">
 
             <com.app.l_pesa.common.CommonTextRegular
                 android:id="@+id/txtToken"
@@ -24,7 +24,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_3sdp"
                 android:fontFamily="@font/montserrat"
-                android:textColor="@color/colorTextBlackLight"
+                android:textColor="@color/textColors"
                 android:textSize="@dimen/_11sdp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -39,11 +39,12 @@
                 android:drawableStart="@drawable/ic_request_date"
                 android:drawablePadding="@dimen/_3sdp"
                 android:fontFamily="@font/montserrat"
-                android:gravity="center"
                 android:text=""
                 android:textColor="@color/colorTextBlackLight"
                 android:textSize="@dimen/_10sdp"
-
+                android:gravity="start|center"
+                android:paddingStart="@dimen/_15sdp"
+                android:paddingEnd="@dimen/_2sdp"
                 app:layout_constraintBottom_toTopOf="@+id/txtRef"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/txtToken"
@@ -53,7 +54,7 @@
                 android:id="@+id/txtRef"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_3sdp"
+                android:layout_marginTop="@dimen/_2sdp"
                 android:fontFamily="@font/montserrat"
                 android:textColor="@color/light_text_color"
                 android:textSize="@dimen/_10sdp"
