--- a/app/src/main/res/layout/content_loan_payback_scheduled.xml
+++ b/app/src/main/res/layout/content_loan_payback_scheduled.xml
@@ -101,6 +101,7 @@
     </LinearLayout>
 
         <com.app.l_pesa.common.CommonTextRegular
+            android:id="@+id/txt_interest_discount"
             android:layout_marginTop="@dimen/_3sdp"
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
@@ -108,6 +109,7 @@
             android:textColor="@color/colorSemiBlack"
             android:text="Pay full amount to get 5% discount on interest"
             android:padding="@dimen/_1sdp"
+            android:visibility="gone"
             />
     </LinearLayout>
 
