--- a/app/src/main/res/layout/layout_interest_history.xml
+++ b/app/src/main/res/layout/layout_interest_history.xml
@@ -8,7 +8,8 @@
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/_3sdp">
+        android:layout_margin="@dimen/_4sdp"
+        >
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
